feat(auth): Implement backend authentication and login flow
- Add Express server with MySQL database connection
- Implement register/login endpoints with bcrypt password hashing
- Add Cloudflare tunnel support for database access
- Update frontend login page to connect with backend API
- Add environment configuration and documentation

--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node backend/server.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudflared": "^0.7.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mysql2": "^3.11.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2"
