feat(backend): Refactor server and db setup for Render deployment - Add new env.js and db.js modules for better environment handling - Update server.js to use new modules and improve error handling - Add render.yaml for render.com deployment configuration - Update package.json with start script for render - Improve documentation in README.md for deployment setup - Add .npmrc with engine-strict=true - Update vercel.json with build configuration

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
-# Backend (Express) configuration
+# Database configuration (used by backend/server.js or Render deployment)
 DB_HOST=your_database_host
-DB_PORT=your_database_port (By default 3306)
+DB_PORT=3306
 DB_USER=your_username
 DB_PASSWORD=your_password
 DB_NAME=your_database_name
+PORT=3001
+
+# Frontend / CORS configuration
 CLIENT_ORIGIN=http://localhost:5173
-PORT=your_port
+# When running Express backend locally the API lives on http://localhost:3001
+VITE_API_BASE_URL=http://localhost:3001
 
 # Cloudflare Access (optional - only needed when DB is behind Cloudflare Zero Trust)
+CF_ACCESS_HOSTNAME=your-cloudflare-access-hostname
 CF_ACCESS_CLIENT_ID=your_cloudflare_access_client_id
 CF_ACCESS_CLIENT_SECRET=your_cloudflare_access_client_secret
-
-# Frontend (Vite) configuration
-VITE_API_BASE_URL=http://localhost:3001
+DB_TUNNEL_PORT=53306
